Fixed spacing issue with some sections

--- a/css/custom.css
+++ b/css/custom.css
@@ -104,21 +104,6 @@ button {
     background: #F29FC4;
 }
 
-/********** price table **********/
-#price-table {
-    padding-top: 4rem !important;
-    padding-bottom: 4rem !important;
-}
-
-#price-table__premium {
-    background: #192440;
-    color: #ffffff;
-}
-
-#price-table ul li {
-    padding: 5px 0;
-}
-
 /********** contact **********/
 #contact {
     background-size: cover;
