--- a/css/tailwind-output.css
+++ b/css/tailwind-output.css
@@ -656,9 +656,16 @@ video {
   padding: 2rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.pt-24 {
+  padding-top: 6rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pt-36 {
+  padding-top: 9rem;
 }
 
 .text-center {
@@ -954,17 +961,7 @@ section {
 }
 
 @media (min-width: 768px) {
-  .md\:w-4\/6 {
-    width: 66.666667%;
-  }
-
   .md\:shrink-0 {
     flex-shrink: 0;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:w-2\/4 {
-    width: 50%;
   }
 }
